--- a/package.json
+++ b/package.json
@@ -174,6 +174,7 @@
     "firebase": "^9.1.3",
     "focus-visible": "^5.2.0",
     "fortmatic": "^2.4.0",
+    "gh-pages": "^4.0.0",
     "graphql": "^15.5.0",
     "graphql-request": "^3.4.0",
     "immer": "^9.0.6",
